Batch file and nuspec to package library using nuget.

--- a/src/IonFar.SharePoint.Provisioning/IonFar.SharePoint.Provisioning.csproj
+++ b/src/IonFar.SharePoint.Provisioning/IonFar.SharePoint.Provisioning.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Services\Taxonomy\NavigationTermInfo.cs" />
     <Compile Include="Services\Taxonomy\TermInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="IonFar.SharePoint.Provisioning.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
