--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,8 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+# =========================
+
+# Generated NuGet package
+*.nupkg
