--- a/src/IonFar.SharePoint.Provisioning/IonFar.SharePoint.Provisioning.csproj
+++ b/src/IonFar.SharePoint.Provisioning/IonFar.SharePoint.Provisioning.csproj
@@ -55,18 +55,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="Infrastructure\Constants.cs" />
     <Compile Include="Infrastructure\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ContentTypeDescriptor.cs" />
     <Compile Include="Services\ContentTypeProvisioningService.cs" />
+    <Compile Include="Services\FieldDescriptor.cs" />
+    <Compile Include="Services\FileUploadService.cs" />
     <Compile Include="Services\IContentTypeProvisioningService.cs" />
+    <Compile Include="Services\IFileUploadService.cs" />
     <Compile Include="Services\IListProvisioningService.cs" />
     <Compile Include="Services\ISiteColumnProvisioningService.cs" />
     <Compile Include="Services\ISiteProvisioningService.cs" />
     <Compile Include="Services\ITaxonomyProvisioningService.cs" />
+    <Compile Include="Services\ListDescriptor.cs" />
     <Compile Include="Services\ListProvisioningService.cs" />
+    <Compile Include="Services\SecurityGroupProvisioningService.cs" />
     <Compile Include="Services\SiteColumnProvisioningService.cs" />
     <Compile Include="Services\SiteProvisioningService.cs" />
+    <Compile Include="Services\StreamReplacer.cs" />
     <Compile Include="Services\TaxonomyProvisioningService.cs" />
     <Compile Include="Services\Taxonomy\NavigationTermInfo.cs" />
     <Compile Include="Services\Taxonomy\TermInfo.cs" />
