Static classes for known feature IDs

--- a/src/IonFar.SharePoint.Provisioning/IonFar.SharePoint.Provisioning.csproj
+++ b/src/IonFar.SharePoint.Provisioning/IonFar.SharePoint.Provisioning.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Services\TaxonomyProvisioningService.cs" />
     <Compile Include="Services\Taxonomy\NavigationTermInfo.cs" />
     <Compile Include="Services\Taxonomy\TermInfo.cs" />
+    <Compile Include="SiteFeatureId.cs" />
+    <Compile Include="WebFeatureId.cs" />
     <Compile Include="WebTemplateId.cs" />
   </ItemGroup>
   <ItemGroup>
